$Id: ChangeLog,v 1.34 2007/12/14 17:26:07 tho Exp $

ChangeLog file of MaKL - http://www.koanlogic.com/kl/cont/gb/html/makl.html

MaKL 1.6.0
	- makl_compile doesn't link when cross compiling
	- added makltc command to ease the creation of cross compilation 
	  environment
	- makl_checkstructelem added to check a specific element in a struct
	- makl_checksymbol added to check for #defines, variables or functions
	- explicit cygwin toolchain (default.tc would fit anyway)
	- force darwin toolchain to use /bin/echo instead of shell builtin 
	  (would break on darwin 9.0.0)
	- makl_checkfunc fix
	- remote toolchain download URL updated
	- added TAR and TAR_ARGS variables to dist.mk

MaKL 1.5.1:
	- added makl_checkextern

MaKL 1.5.0:
	- added "nutshell"s, i.e. a mechanism to create and use completely modular
	  toolchains (via MAKL_ETC variable)
	- added RELOC variable for staged installation
	- removed map.mk include's from within mk templates other than common.mk
	- maklhelp also prints MaKL related environment variables in use
	- subdir template fix: mixing with other mk templates is ok

MaKL 1.4.0:
	- added script.mk template for installing/uninstalling scripts
	- added xeno.mk template for external packages handling aiming to provide
	  a more generic interface than party.mk (which is now deprecated)
	
MaKL 1.3.0:
	- added files.mk template for installing/uninstalling generic files
	- added MAKL_TC_DIR environment variable to override system-wide toolchain
	  settings
	- NO_<UPPERCASE'D-TARGET-NAME> variables for selectively disabling 
	  standard targets
	- users' hooks for all standard MaKL targets in prog, man, lib, deps, inc
	  templates
	- added subst.mk template for doing on-the fly sed(1) substitutions to
	  files
	- Linux mipsel toolchain added
	- shared libs support (Darwin, Linux, FreeBSD, NetBSD, OpenBSD)
	- added basic test/tutorial framework
	- added configure arguments to both header and Makefile output
	- VERSION file supports description