@@ -1,0 +1,11 @@
+# $Id: Makefile,v 1.1 2008/02/24 10:49:14 tho Exp $
+
+include common.mk
+include ../Makefile.conf
+
+FILES = dist.tmpl file.tmpl include.tmpl lib.tmpl man.tmpl prog.tmpl 
+FILES += script.tmpl subdir.tmpl xeno.tmpl
+FILES_DIR = $(MAKL_ROOT)/tmpl
+FILES_MODE = 0644
+
+include files.mk
