@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.34 2007/12/14 17:26:07 tho Exp $
+$Id: ChangeLog,v 1.35 2008/02/24 10:49:14 tho Exp $
 
 ChangeLog file of MaKL - http://www.koanlogic.com/kl/cont/gb/html/makl.html
 
 MaKL 1.6.0
+	- added maklnew command to create Makefile's from templates
 	- makl_compile doesn't link when cross compiling
 	- added makltc command to ease the creation of cross compilation 
 	  environment
